<resources>
    <string name="app_name">Finwo</string>
    <string name="open">DrawerOpen</string>
    <string name="close">DraweClose</string>
    <string name="e_mail">E-mail</string>
    <string name="validate_password">Validate Password</string>
    <string name="complete_the_form">Complete the form</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="my_profile">My profile</string>
    <string name="people">People</string>
    <string name="places">Places</string>
    <string name="info">Info</string>
    <string name="title_activity_maps">Map</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="location">Location</string>
    <string name="add_address">Add Address</string>
    <string name="Address">Address</string>
    <string name="locations">Locations</string>
    <string name="personal_data">Personal Data</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="second_surname">Second surname</string>
    <string name="user_age">Age</string>
    <string name="madrid">Madrid</string>
    <string name="phone_number">Phone Number</string>
    <string name="profiles_title">PROFILES</string>
    <string name="map_title">MAP</string>
    <string name="my_data_title">MY DATA</string>
    <string name="home">Home</string>
    <string name="view_profile">View Profile</string>
    <string name="age">Age</string>
    <string name="messages">Messages</string>
    <string name="my_photos">My Photos</string>
    <string name="friends">Friends</string>
    <string name="featured_profiles">Featured profiles</string>
    <string name="recommended_profiles">Recommended profiles</string>
    <string name="title">Title</string>
    <string name="terms_text">I accept the</string>
    <string name="terms_of_use">terms of use</string>
    <string name="location_title">Welcome</string>
    <string name="location_subtitle">
        You will be restored to a random location, then you can change it, adding pin in map, by random location, or
        with your own location
    </string>
    <string name="accept_permissions">Accept Permissions</string>
    <string name="filter_by">Filter By</string>
    <string name="country">Country</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="random_users">Random users</string>
    <string name="birthday">Birthday</string>
    <string name="years">Years</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="password_info">Password must contain more than 6 character\'s and one number, two passwords must be
        the same
    </string>
    <string name="description">Description</string>
    <string name="university">University</string>
    <string name="job">Job</string>
    <string name="login_error_info">Maybe because you are not connected to internet , or you write bad your e-mail or
        password
    </string>
    <string name="register_error_message">Maybe because you are not connected to internet , or this email already have
        an account
    </string>
    <string name="invalid_access">Invalid access</string>
    <string name="location_update_error_message">Error updating data</string>

    <string name="image_ok_info">Image uploaded!</string>
    <string name="save_personal_data">Save personal data</string>
    <string name="input_name_error">Invalid name or empty</string>
    <string name="add_marker_info">Hold on to add a new location</string>
    <string name="toolbar_text">Choose one option</string>
    <string name="exit">Close session</string>
    <string name="close_dialog">Close</string>
    <string name="email_error">Invalid e-mail or empty</string>
    <string name="password_error">Invalid Password or empty</string>
    <string name="name_error">Invalid name or empty</string>
    <string name="age_error">Sorry this app is only for adults, go play to the park</string>
    <string name="register_error">Fail signing up</string>
    <string name="no_users">There are no users here</string>
    <string name="send_message">Send message</string>
    <string name="error_saving_data">Error saving data , maybe because you don´t have internet connection</string>
    <string name="welcome">Welcome</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="chat_write">Write your message here</string>
    <string name="password_reset">Click here to reset your password</string>
    <string name="reset_password_info">Write your email here for reset your password</string>
    <string name="reset_password_title">Reset your password</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_info">If you really want to delete your account please write your password</string>
    <string name="email_sent">E-mail sent</string>
    <string name="email_sent_error">this user does not exist</string>
    <string name="location_updated">Location updated</string>
    <string name="location_404">Please try another place</string>
    <string name="age_example">00</string>


</resources>
