<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".modules.register.RegisterFragment"
             android:id="@+id/registerFragment"

>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_margin="30dp"
                  android:layout_gravity="center"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/complete_the_form"
                  android:textSize="25sp"
        />

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
        >
            <EditText android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/etE-mail"
                      android:hint="@string/e_mail"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

        >
            <EditText android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/etPassword"
                      android:hint="@string/password"
            />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

        >
            <EditText android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/etPasswordRepeat"
                      android:hint="@string/validate_password"
            />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_gravity="center"
                      android:layout_marginTop="30dp"
        >

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/next"
           />

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/back"

            />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>