<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.login.LoginFragment"
        android:id="@+id/loginFragment"
        android:orientation="vertical"
        android:background="@color/white"

>


    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
    >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"


        >

            <ImageView android:layout_width="200dp"
                       android:layout_height="200dp"
                       android:scaleType="fitXY"
                       android:layout_gravity="center_horizontal"
                       style="@style/title"
                       android:src="@drawable/finwo_logo"
            />
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tiEmail"
                    style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                    android:layout_marginStart="@dimen/space_big"
                    android:layout_marginEnd="@dimen/space_big"
                    android:layout_marginBottom="@dimen/space_big"

            >
                <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                        android:maxLines="1"
                        android:hint="@string/e_mail"
                />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tiPassword"
                    android:layout_marginStart="@dimen/space_big"
                    android:layout_marginEnd="@dimen/space_big"
                    style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary"


            >
                <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                        android:hint="@string/password"
                        android:maxLines="1"
                        android:inputType="textPassword"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvResetPassword"
                    android:text="@string/password_reset"
                    android:textColor="@color/colorPrimary"
                    style="@style/Clickable"
                    android:layout_marginTop="@dimen/space_small"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_marginStart="@dimen/space_biggest"
                    android:layout_marginEnd="@dimen/space_biggest"
            />


            <Button android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/space_big"
                    android:layout_marginStart="@dimen/space_biggest"
                    android:layout_marginEnd="@dimen/space_biggest"
                    android:layout_marginBottom="@dimen/space_big"
                    android:text="@string/login"
                    android:enabled="false"
                    style="@style/roundWhiteButton"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_gravity="center"
                    android:id="@+id/btnLogin"
            />

            <Button
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/space_biggest"
                    android:layout_marginEnd="@dimen/space_biggest"
                    android:layout_height="@dimen/space_biggest"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:fontFamily="@font/roboto_regular"
                    style="@style/roundButton"
                    android:id="@+id/btnRegister"
                    android:layout_marginBottom="@dimen/space_big"

            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>