<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        style="@style/card"
>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="40dp"
            android:src="@drawable/ic_messages"
            android:tint="@color/white"
            style="@style/Clickable"
            app:elevation="@dimen/space_medium"
            android:layout_margin="@dimen/space_medium"
    />
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@color/colorPrimary"
                      android:orientation="vertical">
            <ImageView android:layout_width="match_parent"
                       android:layout_height="300dp"
                       android:src="@drawable/no_profile_image"
                       android:scaleType="fitXY"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintEnd_toEndOf="parent"
                       android:id="@+id/ivProfileImage"


            />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:padding="@dimen/space_medium"
                          android:background="@color/colorPrimary"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        style="@style/title"
                        android:textSize="@dimen/big_font"
                        android:layout_marginBottom="@dimen/space_medium"
                        android:id="@+id/tvName"


                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/medium_font"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        style="@style/subtitle"
                        android:id="@+id/tvLocation"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="@dimen/space_small"

                />

            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_font"
                    android:text="@string/description"
                    android:textColor="@color/lightBlackDark"
                    android:background="@color/white"
                    style="@style/subtitle"
                    android:id="@+id/tvDescription"
                    android:padding="@dimen/space_medium"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@color/white"/>
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="vertical"
                          android:padding="@dimen/space_medium"
                          android:background="@color/white"
                          android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/medium_font"
                        android:text="@string/job"
                        android:textColor="@color/lightBlackDark"
                        android:layout_marginBottom="@dimen/space_medium"
                        style="@style/subtitle"
                        android:id="@+id/tvJob"
                        android:drawableTint="@color/lightBlackDark"
                        android:drawableStart="@drawable/ic_job"
                        android:drawablePadding="@dimen/space_small"

                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/medium_font"
                        android:text="@string/university"
                        android:textColor="@color/lightBlackDark"
                        style="@style/subtitle"
                        android:id="@+id/tvUniversity"
                        android:drawableStart="@drawable/ic_university"
                        android:drawablePadding="@dimen/space_small"
                        android:drawableTint="@color/lightBlackDark"
                />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>
