<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".modules.map.LocationFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/containerLogo"
                android:layout_width="wrap_content"
                android:layout_height="327dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/space_bigger"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="148dp" app:layout_constraintHorizontal_bias="1.0">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_big"
                    android:tint="@color/colorPrimary"/>

            <TextView
                    android:gravity="center"
                    android:id="@+id/tvRegisterFinishName"
                    style="@style/big_title"
                    android:layout_marginTop="@dimen/space_big"
                    android:text="@string/location_title"/>

            <TextView
                    style="@style/text"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/space_big"
                    android:text="@string/location_subtitle"/>
        </LinearLayout>

        <Button
                android:id="@+id/btnNext"
                android:layout_width="200dp"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="false"
                style="@style/button"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/containerLogo" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.44"/>





    </android.support.constraint.ConstraintLayout>
</FrameLayout>