<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:fadeScrollbars="false"
            >

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:padding="@dimen/space_medium"
                >
                    <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profile_image"
                            android:layout_width="@dimen/biggest_circle_size"
                            android:layout_height="@dimen/biggest_circle_size"
                            android:layout_margin="@dimen/space_medium"
                            style="@style/Clickable"
                            android:src="@drawable/no_profile_image"
                            android:elevation="@dimen/space_medium"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center"
                    />
                    <android.support.design.widget.TextInputLayout
                            android:layout_margin="10dp"
                            android:id="@+id/tiName"
                            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent">

                        <EditText
                                android:id="@+id/etName"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:hint="@string/name"
                                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                        />


                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_margin="10dp"
                            android:id="@+id/tiSurname"
                            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent">

                        <EditText
                                android:id="@+id/etSurname"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:hint="@string/surname"
                                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                        />


                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                            android:layout_margin="10dp"
                            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                            android:layout_height="120dp"
                            android:layout_width="match_parent"
                            android:id="@+id/tiDescription"
                    >
                        <EditText
                                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                                android:id="@+id/etDescription"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:hint="@string/description"
                                android:inputType="textMultiLine"
                                android:maxLength="100"
                        />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                            android:layout_margin="10dp"
                            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:id="@+id/tiUniversity"
                    >
                        <EditText
                                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                                android:id="@+id/etUniversity"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:hint="@string/university"
                        />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                            android:layout_margin="10dp"
                            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:id="@+id/tiJob"
                    >
                        <EditText
                                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                                android:id="@+id/etJob"
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:hint="@string/job"
                        />
                    </android.support.design.widget.TextInputLayout>



                        <Button android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/btnNext"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                style="@style/roundButton"
                                android:textSize="@dimen/medium_font"
                                android:text="@string/next"
                        />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>